# campusorbit-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  debug_routes.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a1f0b5b7e31c_initial.py
app/: config.py  database.py  main.py  redis.py  seed.py
app/api/: attendance.py  auth.py  calendar.py  campus.py  complaints.py  courses.py  dashboard.py  documents.py  exams.py  expenses.py  fees.py  hr.py  inventory.py  leads.py  library.py  marketplace.py  notifications.py  payments.py  pricing.py  store.py  students.py  substitutions.py  transport.py  users.py  vendors.py
app/models/: __init__.py  attendance.py  calendar_event.py  campus.py  class_model.py  complaint.py  course.py  document.py  exam.py  expense.py  fee.py  hr.py  inventory.py  lead.py  library.py  marketplace.py  notification.py  pricing.py  store.py  student_profile.py  substitution.py  transport.py  user.py  vendor.py
app/schemas/: attendance.py  auth.py  campus.py  course.py  dashboard.py  erp_modules.py  fee.py  lead.py  students.py  user.py
app/services/: auth_service.py
tests/: conftest.py  test_api.py  test_auth.py  test_students.py
